--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "axios": "0.19.0",
-    "firebase": "6.0.2",
-    "node-sass": "4.12.0",
+    "axios": "^0.21.1",
+    "firebase": "^8.2.10",
+    "node-sass": "4.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "7.0.3",
-    "react-router-dom": "5.0.0",
+    "react-router-dom": "^5.2.0",
     "react-stripe-checkout": "2.6.3",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
@@ -21,7 +21,7 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "react-scripts": "^4.0.3"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
